<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Caterpillars Count!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="siteinfo">Site Information</string>
    <string name="title_activity_order">New Arthropod Order</string>
    <string name="arthropod_order">Arthropod Order</string>
    <string name="site">Site</string>
    <string name="circle">Circle</string>
    <string name="survey">Survey</string>
    <string name="herbivory">Herbivory</string>
    <string name="orderinfo">Arthropod Order Info</string>
    <string name="temp">Temp</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="notes">Notes</string>
    <string name="new_button">NEW</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plant_species_hint">Plant Species (if known)</string>
    <string name="plant_info">Plant Information</string>
    <string name="ordercards_fragment_hint">Tap NEW to add Arthropod Orders!\n\nIf no Arthropod Orders were observed, continue to Plant Information</string>
    <string name="plant_photo">Leaf Photo</string>
    <string name="plant_photo_button_text">CAPTURE</string>
    <string name="submit">SUBMIT</string>
    <string name="length">Length (1 to 300 mm)</string>
    <string name="count">Count (1 to 1000)</string>
    <string name="order_photo">Photo</string>
    <string name="card_length">Length: </string>
    <string name="card_count">Count: </string>
    <string name="card_notes">Notes: </string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="title_activity_setup">Welcome!</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_registration">Registration</string>
    <string name="login_header">Log in to your account</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register409">Registration failed! Email address is already registered</string>
    <string name="register500">Registration failed! Server error</string>
    <string name="register400">Registration failed! Request error</string>
    <string name="registerException">Registration failed! Unknown error</string>
    <string name="registration_dialog1">A confirmation email has been sent to</string>
    <string name="registration_dialog2">Please follow the instructions therein to activate your Caterpillars Count! account. You will not be able to log in before doing so.\n\n</string>
    <string name="registration_dialog3">Be sure to check your spam folder if you do not see an email from us in your inbox</string>
    <string name="login_credentials500">Log in error (500)</string>
    <string name="login_credentials200">Successfully logged in!</string>
    <string name="login_credentials404">Log in error (404)</string>
    <string name="login_credentials400">Log in error (400)</string>
    <string name="loginException">Log in failed! Unknown error</string>
    <string name="login_notActive">Account not yet active. Please check your email.</string>
    <string name="login_deactivated">Account has been deactivated by an administrator due to misuse</string>
    <string name="login_invalidCredentials">Invalid email address or password</string>
    <string name="login_userDownloadFailure">Failed to download user data</string>
    <string name="forgot_password">Forgot password</string>
    <string name="save">Save</string>
    <string name="order_invalidCount">Count format is invalid</string>
    <string name="order_invalidLength">Length format is invalid</string>
    <string name="site_notes">Site notes</string>
    <string name="plant_species">Plant Species</string>
    <string name="question_mark">\?</string>


</resources>
