
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="jforce.com.caterpillarcount.OrderActivity">

        <TextView
            android:id="@+id/order_spinnertext"
            android:text="@string/arthropod_order"
            android:textColor="#355D3D"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/order_spinner"
            android:layout_below="@id/order_spinnertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/length_edittext"
            android:layout_below="@id/order_spinner"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:hint="@string/length"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/count_edittext"
            android:layout_below="@id/length_edittext"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:hint="@string/count"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/notes_order_edittext"
            android:layout_below="@id/count_edittext"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:hint="@string/notes"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/orderphoto_text"
            android:layout_below="@id/notes_order_edittext"
            android:text="@string/order_photo"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="#355D3D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/capture_order_photo_button"
            android:layout_below="@id/orderphoto_text"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="#355D3D"
            android:onClick="takePicture"
            android:layout_centerHorizontal="true"
            android:text="@string/plant_photo_button_text"
            android:layout_width="150dp"
            android:layout_height="150dp" />
        <Button
            android:layout_alignParentBottom="true"
            android:layout_marginTop="40dp"
            android:background="#355D3D"
            android:textColor="#FFFFFF"
            android:text="@string/save"
            android:onClick="submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </RelativeLayout>

