<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".HomeActivity">
        <LinearLayout
            android:id="@+id/timedate_text_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textColor="#355D3D"
                android:textSize="18sp"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="#355D3D"
                android:textSize="18sp"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="#355D3D"
                android:textSize="18sp"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/timedate_picker_row"
            android:layout_below="@id/timedate_text_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/temp_spinner"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/time_picker_edittext"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="pickTime"
                android:focusable="false"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/date_picker_edittext"
                android:layout_weight="1"
                android:focusable="false"
                android:maxLines="1"
                android:onClick="pickDate"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />


        </LinearLayout>


        <TextView
            android:id="@+id/siteinfo_text"
            android:text="@string/siteinfo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_below="@id/timedate_picker_row"
            android:textColor="#355D3D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/site_text"
            android:text="@string/site"
            android:layout_marginTop="20dp"
            android:textColor="#355D3D"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_below="@id/siteinfo_text"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/site_spinner"
            android:layout_below="@id/site_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/circle_text"
            android:text="@string/circle"
            android:layout_marginTop="5dp"
            android:textColor="#355D3D"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_below="@id/site_spinner"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/circle_spinner"
            android:layout_below="@id/circle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/survey_text"
            android:text="@string/survey"
            android:layout_marginTop="5dp"
            android:textColor="#355D3D"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_below="@id/circle_spinner"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/survey_spinner"
            android:layout_marginTop="5dp"
            android:layout_below="@id/survey_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/sitenotes_edittext"
            android:layout_below="@id/survey_spinner"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:hint="@string/notes"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/orderinfo_text"
            android:layout_below="@id/sitenotes_edittext"
            android:text="@string/orderinfo"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#355D3D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/addorder_button"
            android:layout_toRightOf="@id/orderinfo_text"
            android:layout_below="@id/sitenotes_edittext"
            android:background="#355D3D"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:minHeight="30dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:onClick="addOrder"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_button"/>
        <fragment android:name="jforce.com.caterpillarcount.OrderCardFragment"
            android:id="@+id/order_card_fragment"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_below="@id/orderinfo_text"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_ordercards" />
        <TextView
            android:id="@+id/plantinfo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#355D3D"
            android:text="@string/plant_info"
            android:layout_below="@id/order_card_fragment"/>
        <EditText
            android:id="@+id/plantspecies_edittext"
            android:layout_below="@id/plantinfo_text"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:hint="@string/plant_species"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/herbivory_text"
            android:text="@string/herbivory"
            android:layout_marginTop="5dp"
            android:textColor="#355D3D"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_below="@id/plantspecies_edittext"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/herbivory_spinner"
            android:layout_below="@id/herbivory_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/plantphoto_text"
            android:layout_below="@id/herbivory_spinner"
            android:text="@string/plant_photo"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#355D3D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/capture_plant_photo_button"
            android:layout_below="@id/plantphoto_text"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="#355D3D"
            android:onClick="capturePhoto"
            android:layout_centerHorizontal="true"
            android:text="@string/plant_photo_button_text"
            android:layout_width="150dp"
            android:layout_height="150dp" />
        <Button
            android:layout_below="@id/capture_plant_photo_button"
            android:layout_marginTop="20dp"
            android:background="#355D3D"
            android:textColor="#FFFFFF"
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </RelativeLayout>
</ScrollView>
