<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jforce.caterpillarscount.LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#355D3D"
        android:text="@string/login_header"/>

    <EditText
        android:id="@+id/login_emailfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:layout_below="@id/login_title"
        android:hint="@string/email_address"/>

    <EditText
        android:id="@+id/login_passwordfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:layout_below="@id/login_emailfield"
        android:hint="@string/password"/>


    <Button
        android:id="@+id/button_setup_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="#FFFFFF"
        android:background="#355D3D"
        android:text="@string/login"
        android:onClick="login"/>


</RelativeLayout>
